[gd_scene load_steps=5 format=3 uid="uid://dm4iw2i8yrdke"]

[ext_resource type="Script" uid="uid://tmsfkb55q2xp" path="res://story_scene.gd" id="1_7jyys"]
[ext_resource type="FontFile" uid="uid://0gnjr0nj6cwc" path="res://fronts/IMTYC Haemmoo Demo.ttf" id="2_8n8t3"]

[sub_resource type="FontFile" id="FontFile_8n8t3"]
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/225/0/ascent = 0.0
cache/0/225/0/descent = 0.0
cache/0/225/0/underline_position = 0.0
cache/0/225/0/underline_thickness = 0.0
cache/0/225/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8n8t3"]
bg_color = Color(0, 0, 0, 1)

[node name="StoryScene" type="Node2D"]
script = ExtResource("1_7jyys")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(569, -7.00001)
scale = Vector2(0.657105, 0.757324)

[node name="DialogueBox" type="Panel" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = 467.0
offset_right = 1101.0
offset_bottom = 587.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = 950.0
offset_top = 3.0
offset_right = 990.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("2_8n8t3")
theme_override_font_sizes/font_size = 20
text = "111"

[node name="DialogueLabel" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = 52.0
offset_top = 27.0
offset_right = 983.0
offset_bottom = 81.0
theme_override_fonts/font = SubResource("FontFile_8n8t3")
theme_override_font_sizes/font_size = 25
text = "----------------------------------------------------------------------------------------------"

[node name="next_button" type="Button" parent="DialogueBox"]
layout_mode = 0
offset_left = 972.0
offset_top = -44.0
offset_right = 1043.0
offset_bottom = -5.0
theme_override_fonts/font = ExtResource("2_8n8t3")
theme_override_styles/normal = SubResource("StyleBoxFlat_8n8t3")
text = "next"

[connection signal="pressed" from="DialogueBox/next_button" to="." method="_on_next_button_pressed"]
